--- a/scss/style.scss
+++ b/scss/style.scss
@@ -311,7 +311,9 @@ nav{
                   font-size: xx-large;
                   font-weight: 500;
                 }
-               
+              }
+              &:focus{
+                outline: none;
               }
             }
           }
@@ -333,7 +335,7 @@ nav{
 
     .wrap{
       overflow-y: scroll;
-      min-width: 250px;
+      width: 250px;
       height: 500px;
       padding: 20px;
       -ms-overflow-style: none; /* for Internet Explorer, Edge */
@@ -370,6 +372,7 @@ nav{
           width: 100%;
           text-align: center;
           line-height: 45px;
+          height: 45px;
           position: relative;
           margin-top: 20px;
           display: flex;
@@ -377,6 +380,7 @@ nav{
           align-items: center;
           text-decoration: none;
 	        transition: all 0.4s;
+          overflow: hidden;
           &:hover{
             cursor: pointer;
             background-color: white;
@@ -394,8 +398,11 @@ nav{
             color: black;
             margin: 0;
             padding: 0;
-            margin-left: 20px;
             font-size: 14px;
+            height: 45px;
+            white-space: nowrap; 
+            text-overflow: ellipsis;
+            overflow: hidden;
           }
         }
       }
@@ -698,7 +705,7 @@ nav{
       margin-left: 15px;
       margin-right: 15px;
       .wrap{
-        min-width: 200px;
+        // min-width: 200px;
       }
     }
   }
