--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,6 +361,7 @@ nav{
         p{
           color: black;
           font-size: 20px;
+          overflow-x: hidden;
         }
       }
       #link-container{
@@ -596,6 +597,18 @@ nav{
 
 }
 
+@media (max-width: 580px) {
+  #container-showlink{
+    .link{
+      .linkinput{
+        i{
+          right: 20px;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 700px) {
   .content{
     .limiter{
@@ -611,11 +624,8 @@ nav{
   }
   #container-showlink{
     .link{
-      .linkinput{
-        width: 100%;
-        i{
-          right: 20px;
-        }
+      .yesno{
+        right: -47px;
       }
     }
   }
@@ -643,21 +653,44 @@ nav{
         i{
           right: 10px;
         }
-        h5{
-          font-size: 18px;
-        }
-        input{
-          width: 90%;
-          &:first-of-type{
+        .linknametitle-wrap{
+          #linknametitle{
             font-size: 18px;
           }
-          &:last-of-type{
-            font-size: 15px;
+          #title{
+            font-size: 18px;
+          }
+        }
+        #link{
+          font-size: 16px;
+        }
+      }
+    }
+  }
+  nav{
+    .right{
+      .nav-icon{
+        i{
+          margin-top: 0;
+          font-size: 27px;
+        }
+      }
+    }
+  }
+  .content{
+    .limiter{
+      .container-login100{
+        .wrap-login100{
+          .login100-form{
+            .name{
+              display: flex;
+              column-gap: 10px;
+            }
           }
         }
       }
     }
-}
+  }
 }
 
 @media (max-width: 390px) {
@@ -665,6 +698,11 @@ nav{
     .link{
       .linkinput{
         width: 100%;
+        .linknametitle-wrap{
+          #linknametitle{
+            display: none;
+          }
+        }
         input{
           width: 85%;
         }
@@ -676,7 +714,7 @@ nav{
         right: 6%;
       }
     }
-}
+  }
 }
 @media (max-width: 300px) {
   #container-showlink{
@@ -705,20 +743,12 @@ nav{
       margin-left: 15px;
       margin-right: 15px;
       .wrap{
-        // min-width: 200px;
+        width: 200px;
+        margin: auto;
       }
     }
   }
-  nav{
-    .right{
-      .nav-icon{
-        i{
-          margin-top: 0;
-          font-size: 23px;
-        }
-      }
-    }
-  }
+ 
   .logo{
     margin-top: 40px;
     img{
