--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,94 @@ nav .right .nav-icon i {
   cursor: pointer;
 }
 
+#guides {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(19, 16, 16);
+  position: absolute;
+  top: 0;
+  opacity: 0.8;
+  z-index: 1000;
+}
+#guides #welcome, #guides #uploadavatar, #guides #changename, #guides #nexttoaddlink, #guides #addlink, #guides #chooselink, #guides #nexttolinkcontainer, #guides #edittitle, #guides #editlink, #guides #done {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: black;
+  color: white;
+  border-radius: 40px;
+  padding: 40px 0;
+  border: 2px solid rgb(58, 57, 57);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+#guides #welcome .item, #guides #uploadavatar .item, #guides #changename .item, #guides #nexttoaddlink .item, #guides #addlink .item, #guides #chooselink .item, #guides #nexttolinkcontainer .item, #guides #edittitle .item, #guides #editlink .item, #guides #done .item {
+  width: 50%;
+  height: 50px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+#guides #welcome .item div, #guides #uploadavatar .item div, #guides #changename .item div, #guides #nexttoaddlink .item div, #guides #addlink .item div, #guides #chooselink .item div, #guides #nexttolinkcontainer .item div, #guides #edittitle .item div, #guides #editlink .item div, #guides #done .item div {
+  cursor: pointer;
+  padding: 10px;
+}
+#guides #welcome .item div:hover, #guides #uploadavatar .item div:hover, #guides #changename .item div:hover, #guides #nexttoaddlink .item div:hover, #guides #addlink .item div:hover, #guides #chooselink .item div:hover, #guides #nexttolinkcontainer .item div:hover, #guides #edittitle .item div:hover, #guides #editlink .item div:hover, #guides #done .item div:hover {
+  color: gray;
+}
+#guides #uploadavatar, #guides #changename, #guides #nexttoaddlink, #guides #addlink, #guides #chooselink, #guides #nexttolinkcontainer, #guides #edittitle, #guides #editlink, #guides #done {
+  display: none;
+  left: 65%;
+  top: 45%;
+  width: 300px;
+  height: 60px;
+  padding: 15px 0;
+}
+#guides #changename {
+  top: 56%;
+  left: 72%;
+}
+#guides #nexttoaddlink, #guides #nexttolinkcontainer, #guides #done {
+  cursor: pointer;
+  left: 80%;
+  width: 150px;
+  transition: 0.6s;
+}
+#guides #nexttoaddlink:hover, #guides #nexttolinkcontainer:hover, #guides #done:hover {
+  background-color: white;
+  color: black;
+}
+#guides #addlink {
+  top: 62%;
+  left: 73%;
+}
+#guides #chooselink {
+  top: 70%;
+  left: 75%;
+}
+#guides #nexttolinkcontainer {
+  top: 65%;
+  left: 88%;
+}
+#guides #edittitle {
+  top: 70%;
+  left: 77%;
+}
+#guides #editlink {
+  top: 78%;
+  left: 77%;
+}
+#guides #done {
+  top: 75%;
+  left: 90%;
+}
+
 @media (max-width: 1500px) {
   .content .show {
     left: 12%;
