--- a/scss/style.scss
+++ b/scss/style.scss
@@ -517,6 +517,95 @@ nav{
 }
 
 
+// CSS guides
+#guides{
+  width: 100%;
+  height: 100%;
+  background-color: rgb(19, 16, 16);
+  position: absolute;
+  top: 0;
+  opacity: 0.8;
+  z-index: 1000;
+  #welcome,#uploadavatar,#changename,#nexttoaddlink,#addlink,#chooselink,#nexttolinkcontainer,#edittitle,#editlink,#done{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 200px;
+    background-color: black;
+    color: white;
+    border-radius: 40px;
+    padding: 40px 0;
+    border: 2px solid rgb(58, 57, 57);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    .item{
+      width: 50%;
+      height: 50px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      div{
+        cursor: pointer;
+        padding: 10px;
+        &:hover{
+          color: gray;
+        }
+      }
+    }
+  }
+  #uploadavatar,#changename,#nexttoaddlink,#addlink,#chooselink,#nexttolinkcontainer,#edittitle,#editlink,#done{
+    display: none;
+    left: 65%;
+    top: 45%;
+    width: 300px;
+    height: 60px;
+    padding: 15px 0;
+  }
+  #changename{
+    top: 56%;
+    left: 72%;
+  }
+  #nexttoaddlink,#nexttolinkcontainer,#done{
+    cursor: pointer;
+    left: 80%;
+    width: 150px;
+    transition: 0.6s;
+    &:hover{
+      background-color: white;
+      color: black;
+    }
+  }
+  #addlink{
+    top: 62%;
+    left: 73%;
+  }
+  #chooselink{
+    top: 70%;
+    left: 75%;
+  }
+  #nexttolinkcontainer{
+    top: 65%;
+    left: 88%;
+  }
+  #edittitle{
+    top: 70%;
+    left: 77%;
+  }
+  #editlink{
+    top: 78%;
+    left: 77%;
+  }
+  #done{
+    top: 75%;
+    left: 90%;
+  }
+}
+
 
 // Responsive
 @media (max-width: 1500px) {
