--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -78,3 +78,22 @@
         }
     }
 }
+
+@mixin welcome(){
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    height: 200px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    padding: 40px 0;
+    // border: 2px solid rgb(58, 57, 57);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
