--- a/scss/style.scss
+++ b/scss/style.scss
@@ -528,11 +528,16 @@ nav{
   top: 0;
   opacity: 0.8;
   z-index: 1000;
-  #welcome,#nexttoaddlink,#addlink,#chooselink,#nexttolinkcontainer,#edittitle,#editlink,#done{
+  #welcome{
     @include welcome;
     display: flex;
     align-items: center;
     justify-content: center;
+    p{
+      &:first-of-type{
+        font-size: 27px;
+      }
+    }
     .item{
       width: 50%;
       height: 50px;
@@ -549,71 +554,78 @@ nav{
     }
    
   }
-  #uploadavatar,#changename{
+  #uploadavatar,#changename,#addlink,#edittitle,#editlink{
+    font-size: 18px;
     @include welcome;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
+    height: 60px;
+    width: 300px;
+    padding: 15px 0;
+    display: none;
     p{
-      display: inline-block;
       margin: 0;
       padding: 0;
+    }
+    @keyframes handanimation {
+      0%{margin-left: 20px;}
+      100%{margin-left: 0;}
     }
     i{
       margin-right: 20px;
       font-size: 30px;
-
+      animation: handanimation 1s infinite;
     }
   }
-  #uploadavatar,#changename,#nexttoaddlink,#addlink,#chooselink,#nexttolinkcontainer,#edittitle,#editlink,#done{
-    display: none;
-    left: 65%;
-    top: 45%;
-    width: 300px;
-    height: 60px;
-    padding: 15px 0;
+  #uploadavatar{
+    top: 40%;
+    left: 62%;
+    border-radius: 20px;
   }
   #changename{
-    top: 56%;
+    top: 54%;
     left: 72%;
     border-radius: 20px;
   }
   #nexttoaddlink,#nexttolinkcontainer,#done{
-    cursor: pointer;
+    @include welcome;
+    display: none;
     left: 80%;
+    top: 42%;
     width: 150px;
+    height: 60px;
+    padding: 15px 0;
+    cursor: pointer;
     transition: 0.6s;
+    font-size: 20px;
     &:hover{
       background-color: white;
       color: black;
     }
   }
   #addlink{
-    top: 62%;
-    left: 73%;
-  }
-  #chooselink{
-    top: 70%;
-    left: 75%;
+    top: 60%;
+    left: 74%;
+    width: 400px;
   }
   #nexttolinkcontainer{
-    top: 65%;
-    left: 88%;
+    top: 60%;
+    left: 90%;
   }
   #edittitle{
-    top: 70%;
+    top: 68%;
     left: 77%;
   }
   #editlink{
-    top: 78%;
+    top: 74%;
     left: 77%;
   }
   #done{
-    top: 75%;
-    left: 90%;
+    top: 71%;
+    left: 92%;
   }
-
-
 }
 
 
