--- a/css/style.css
+++ b/css/style.css
@@ -639,13 +639,13 @@ nav .right .nav-icon i {
   animation: handanimation 1s infinite;
 }
 #guides #uploadavatar {
-  top: 40%;
-  left: 62%;
+  left: calc(50% + 250px);
+  top: 420px;
   border-radius: 20px;
 }
 #guides #changename {
-  top: 54%;
-  left: 72%;
+  left: calc(50% + 420px);
+  top: 540px;
   border-radius: 20px;
 }
 #guides #nexttoaddlink, #guides #nexttolinkcontainer, #guides #done {
@@ -665,8 +665,8 @@ nav .right .nav-icon i {
   justify-content: space-between;
   align-items: center;
   display: none;
-  left: 80%;
-  top: 42%;
+  left: calc(50% + 550px);
+  top: 420px;
   width: 150px;
   height: 60px;
   padding: 15px 0;
@@ -679,27 +679,33 @@ nav .right .nav-icon i {
   color: black;
 }
 #guides #addlink {
-  top: 60%;
-  left: 74%;
+  left: calc(50% + 460px);
+  top: 600px;
   width: 400px;
 }
 #guides #nexttolinkcontainer {
-  top: 60%;
-  left: 90%;
+  left: calc(50% + 760px);
+  top: 600px;
 }
 #guides #edittitle {
-  top: 68%;
-  left: 77%;
+  left: calc(50% + 440px);
+  top: 675px;
 }
 #guides #editlink {
-  top: 74%;
-  left: 77%;
+  left: calc(50% + 440px);
+  top: 730px;
 }
 #guides #done {
-  top: 71%;
-  left: 92%;
+  left: calc(50% + 550px);
+  top: 850px;
 }
 
+@media (max-width: 1700px) {
+  #guides #nexttolinkcontainer {
+    left: calc(50% + 590px);
+    top: 700px;
+  }
+}
 @media (max-width: 1500px) {
   .content .show {
     left: 12%;
