--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ nav .right .nav-icon i {
 #guides #welcome .item div:hover {
   color: gray;
 }
-#guides #uploadavatar, #guides #changename, #guides #addlink, #guides #edittitle, #guides #editlink {
+#guides #uploadavatar, #guides #changename, #guides #addlink, #guides #edittitle, #guides #editlink, #guides #preview, #guides #edittitle-responsive, #guides #editlink-responsive, #guides #changename-responsive, #guides #uploadavatar-responsive, #guides #addlink-responsive {
   font-size: 18px;
   position: absolute;
   top: 50%;
@@ -616,16 +616,16 @@ nav .right .nav-icon i {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  height: 60px;
+  height: 50px;
   width: 300px;
   padding: 15px 0;
   display: none;
 }
-#guides #uploadavatar p, #guides #changename p, #guides #addlink p, #guides #edittitle p, #guides #editlink p {
+#guides #uploadavatar p, #guides #changename p, #guides #addlink p, #guides #edittitle p, #guides #editlink p, #guides #preview p, #guides #edittitle-responsive p, #guides #editlink-responsive p, #guides #changename-responsive p, #guides #uploadavatar-responsive p, #guides #addlink-responsive p {
   margin: 0;
   padding: 0;
 }
-@keyframes handanimation {
+@keyframes handanimationtoleft {
   0% {
     margin-left: 20px;
   }
@@ -633,20 +633,38 @@ nav .right .nav-icon i {
     margin-left: 0;
   }
 }
-#guides #uploadavatar i, #guides #changename i, #guides #addlink i, #guides #edittitle i, #guides #editlink i {
+#guides #uploadavatar i, #guides #changename i, #guides #addlink i, #guides #edittitle i, #guides #editlink i, #guides #preview i, #guides #edittitle-responsive i, #guides #editlink-responsive i, #guides #changename-responsive i, #guides #uploadavatar-responsive i, #guides #addlink-responsive i {
   margin-right: 20px;
   font-size: 30px;
-  animation: handanimation 1s infinite;
+  animation: handanimationtoleft 1s infinite;
 }
 #guides #uploadavatar {
-  left: calc(50% + 250px);
+  left: calc(50% + 230px);
   top: 420px;
   border-radius: 20px;
 }
+#guides #uploadavatar-responsive {
+  left: calc(50% - 235px);
+  top: 420px;
+  border-radius: 20px;
+}
+#guides #uploadavatar-responsive i {
+  animation: handanimationtoright 1s infinite;
+  margin-left: 20px;
+}
 #guides #changename {
-  left: calc(50% + 420px);
+  left: calc(50% + 410px);
   top: 540px;
   border-radius: 20px;
+}
+#guides #changename-responsive {
+  top: 540px;
+  border-radius: 20px;
+  left: calc(50% + 65px);
+}
+#guides #changename-responsive i {
+  animation: handanimationtoright 1s infinite;
+  margin-left: 20px;
 }
 #guides #nexttoaddlink, #guides #nexttolinkcontainer, #guides #done {
   position: absolute;
@@ -665,8 +683,8 @@ nav .right .nav-icon i {
   justify-content: space-between;
   align-items: center;
   display: none;
-  left: calc(50% + 550px);
-  top: 420px;
+  left: 90%;
+  top: 45%;
   width: 150px;
   height: 60px;
   padding: 15px 0;
@@ -683,29 +701,67 @@ nav .right .nav-icon i {
   top: 600px;
   width: 400px;
 }
-#guides #nexttolinkcontainer {
-  left: calc(50% + 760px);
-  top: 600px;
+#guides #addlink-responsive {
+  left: calc(50% + 190px);
+  top: 520px;
+  width: 300px;
+  height: 100px;
+}
+#guides #addlink-responsive i {
+  animation: handanimationtodown 1s infinite;
 }
 #guides #edittitle {
   left: calc(50% + 440px);
   top: 675px;
+  height: 50px;
+}
+@keyframes handanimationtoright {
+  0% {
+    margin-right: 20px;
+  }
+  100% {
+    margin-right: 0;
+  }
+}
+#guides #edittitle-responsive {
+  left: calc(50% + 170px);
+  top: 675px;
+  height: 50px;
+}
+#guides #edittitle-responsive i {
+  margin-left: 20px;
+  animation: handanimationtoright 1s infinite;
 }
 #guides #editlink {
   left: calc(50% + 440px);
   top: 730px;
+  height: 45px;
 }
-#guides #done {
-  left: calc(50% + 550px);
-  top: 850px;
+#guides #editlink-responsive {
+  left: calc(50% + 170px);
+  top: 730px;
+  height: 45px;
 }
-
-@media (max-width: 1700px) {
-  #guides #nexttolinkcontainer {
-    left: calc(50% + 590px);
-    top: 700px;
+#guides #editlink-responsive i {
+  margin-left: 20px;
+  animation: handanimationtoright 1s infinite;
+}
+@keyframes handanimationtodown {
+  0% {
+    margin-top: 0;
+  }
+  100% {
+    margin-top: 10px;
   }
 }
+#guides #preview {
+  top: 220px;
+  height: 100px;
+}
+#guides #preview i {
+  animation: handanimationtodown 1s infinite;
+}
+
 @media (max-width: 1500px) {
   .content .show {
     left: 12%;
@@ -717,6 +773,9 @@ nav .right .nav-icon i {
   }
 }
 @media (max-width: 1100px) {
+  #guides #edittitle-responsive, #guides #editlink-responsive {
+    left: calc(50% + 130px);
+  }
   .content .show {
     left: 5%;
   }
