--- a/scss/style.scss
+++ b/scss/style.scss
@@ -554,14 +554,14 @@ nav{
     }
    
   }
-  #uploadavatar,#changename,#addlink,#edittitle,#editlink{
+  #uploadavatar,#changename,#addlink,#edittitle,#editlink,#preview,#edittitle-responsive,#editlink-responsive,#changename-responsive,#uploadavatar-responsive,#addlink-responsive{
     font-size: 18px;
     @include welcome;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    height: 60px;
+    height: 50px;
     width: 300px;
     padding: 15px 0;
     display: none;
@@ -569,37 +569,49 @@ nav{
       margin: 0;
       padding: 0;
     }
-    @keyframes handanimation {
+    @keyframes handanimationtoleft {
       0%{margin-left: 20px;}
       100%{margin-left: 0;}
     }
     i{
       margin-right: 20px;
       font-size: 30px;
-      animation: handanimation 1s infinite;
+      animation: handanimationtoleft 1s infinite;
     }
   }
   #uploadavatar{
-    // top: 42%;
-    // left: 62%;
-    left: calc(50% + 250px);
+    left: calc(50% + 230px);
     top: 420px;
     border-radius: 20px;
   }
+  #uploadavatar-responsive{
+    left: calc(50% - 235px);
+    top: 420px;
+    border-radius: 20px;
+    i{
+      animation: handanimationtoright 1s infinite;
+      margin-left: 20px;
+    }
+  }
   #changename{
-    // top: 54%;
-    // left: 72%;
-    left: calc(50% + 420px);
+    left: calc(50% + 410px);
     top: 540px;
     border-radius: 20px;
+  }
+  #changename-responsive{
+    top: 540px;
+    border-radius: 20px;
+    i{
+      animation: handanimationtoright 1s infinite;
+      margin-left: 20px;
+    }
+    left: calc(50% + 65px);
   }
   #nexttoaddlink,#nexttolinkcontainer,#done{
     @include welcome;
     display: none;
-    // left: 80%;
-    // top: 42%;
-    left: calc(50% + 550px);
-    top: 420px;
+    left: 90%;
+    top: 45%;
     width: 150px;
     height: 60px;
     padding: 15px 0;
@@ -612,57 +624,71 @@ nav{
     }
   }
   #addlink{
-    // top: 60%;
-    // left: 74%;
     left: calc(50% + 460px);
     top: 600px;
     width: 400px;
   }
-  #nexttolinkcontainer{
-    // top: 60%;
-    // left: 90%;
-    left: calc(50% + 760px);
-    top: 600px;
+  #addlink-responsive{
+    left: calc(50% + 190px);
+    top: 520px;
+    width: 300px;
+    height: 100px;
+    i{
+      animation: handanimationtodown 1s infinite;
+    }
   }
   #edittitle{
-    // top: 68%;
-    // left: 77%;
     left: calc(50% + 440px);
     top: 675px;
+    height: 50px;
+  }
+  @keyframes handanimationtoright {
+    0%{margin-right: 20px;}
+    100%{margin-right: 0;}
+  }
+  #edittitle-responsive{
+    left: calc(50% + 170px);
+    top: 675px;
+    i{
+      margin-left: 20px;
+      animation: handanimationtoright 1s infinite;
+    }
+    height: 50px;
   }
   #editlink{
-    // top: 74%;
-    // left: 77%;
     left: calc(50% + 440px);
     top: 730px;
+    height: 45px;
   }
-  #done{
-    // top: 71%;
-    // left: 92%;
-    left: calc(50% + 550px);
-    top: 850px;
+  #editlink-responsive{
+    left: calc(50% + 170px);
+    top: 730px;
+    i{
+      margin-left: 20px;
+      animation: handanimationtoright 1s infinite;
+    }
+    height: 45px;
+  }
+  @keyframes handanimationtodown {
+    0%{margin-top: 0;}
+    100%{margin-top: 10px;}
+  }
+  #preview{
+    top: 220px;
+    height: 100px;
+    i{
+      animation: handanimationtodown 1s infinite;
+    }
   }
 }
 
 
 // Responsive
-@media (max-width: 1700px) {
-  #guides{
-    #nexttolinkcontainer{
-      left: calc(50% + 590px);
-      top: 700px;
-    }
-  }
-} 
 @media (max-width: 1500px) {
   .content{
     .show{
       left: 12%;
     }
-    .limiter{
-      // margin-left: 400px;
-    }
- 
   }
 } 
 @media (max-width: 1200px) {
@@ -676,6 +702,11 @@ nav{
   }
 }
 @media (max-width: 1100px) {
+  #guides{
+    #edittitle-responsive,#editlink-responsive{
+      left: calc(50% + 130px);
+    }
+  }
   .content{
     .show{
       left: 5%;
